--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .up-1 {
     background-color: #D7A480;
 }
@@ -5,4 +11,5 @@
 .up-2 {
     text-align: center;
     margin-top: 50px;
+    color: #6A5A51;
 }
